[tool.poetry]
name = "flask101"
version = "0.1.0"
description = "Flask101 project file"
authors = ["Suchandra Thapa <suchandra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "~=3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
